<resources>
    <string name="app_name">弹幕播放器</string>
    <string name="title">我的视频</string>
    <string name="press_to_exit">再按一次退出</string>
    <string name="play_error">播放出错啦！</string>
    <string name="play_url_error">播放地址有误，无法播放！</string>
    <string name="zimu">字</string>
    <string name="danmu">弹</string>
    <string name="danmu_close">弹幕关</string>
    <string name="danmu_setting">弹幕设置</string>
    <string name="danmu_switch">弹幕开关</string>
    <string name="danmu_url">弹幕</string>
    <string name="change">更换</string>
    <string name="block_list">屏蔽列表</string>
    <string name="mobile_danmu">滚动弹幕</string>
    <string name="botton_danmu">底部弹幕</string>
    <string name="top_danmu">顶部弹幕</string>
    <string name="key_word_block">关键字屏蔽</string>
    <string name="data_loading">数据加载中...</string>
    <string name="tblock">屏蔽</string>
    <string name="tsize">字体</string>
    <string name="tspeed">速度</string>
    <string name="danmu_size">字体大小</string>
    <string name="size_big">大</string>
    <string name="size_middle">中</string>
    <string name="size_small">小</string>
    <string name="danmu_speed">弹幕速度</string>
    <string name="move_fast">快</string>
    <string name="move_middle">中</string>
    <string name="move_slow">慢</string>
    <string name="about_player">关于</string>
    <string name="add_block_keyword">添加</string>

    <string name="about_player_text">
        &#160;&#160;&#160;&#160;欢迎使用此弹幕播放器(V1.0.1)，正如其名，这个APP是专门为了播放b站离线弹幕而制作的。
        APP支持b站离线弹幕加载，并支持市面上常见的视频格式，其余并未测试。\n\n

        &#160;&#160;&#160;&#160;此外APP引用了一些的开源包，由于某些只采用少量代码，所以这里只贴出使用了完整的开源包，如有触犯权益，请联系我。\n\n

        Android开源弹幕引擎·烈焰弹幕使\n
        来源：https://github.com/Bilibili/DanmakuFlameMaster\n\n

        VitamioLibrary5.0\n
        来源：https://www.vitamio.org\n\n

        最后，APP仅供各位弹幕爱好者交流学习使用。如有修改本APP（修改变更，反编译）等信息后所发布的文件与本人无关。\n\n

        此APP是我个人所制作，有很多不成熟之处，如果各位在使用过程中遇到了特大的bug，或者想提供意见或建议等，可以联系我，我..我可能会修改。\n\n

        作者：叶子\n\n
        联系方式：yeshao1997@outlook.com\n
    </string>
    
    <string name="about_use">使用说明</string>
    <string name="about_use_text">
        视频获取：\n
        &#160;&#160;&#160;&#160;APP会在第一次打开时获取手机中所有视频文件，但是由于一些原因，获取的视频文件不能获取RMVB格式的文件夹，
        你可以通过右上角的添加按钮，手动选择文件夹（进入选取的文件夹后，点击右上角）添加。\n
        &#160;&#160;&#160;&#160;如果以后手机中添加了非RMVB格式视频文件，可以直接下拉刷新获取文件列表。\n\n

        弹幕播放：\n
        &#160;&#160;&#160;&#160;进入视频播放界面后，选择更换弹幕地址，选择b站离线弹幕文件，最后点击弹幕开关，APP将会加载弹幕文件。\n\n

        文件删除：\n
        &#160;&#160;&#160;&#160;APP从不直接删除文件夹或文件，如需删除，请使用其他文件浏览器删除。\n\n

        还有其它功能和技巧请自行探索。\n
    </string>
</resources>
