<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/danmu_setting_layout"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:background="#66000000"
    android:visibility="gone"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal"
        android:background="#cc000000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:text="@string/danmu_setting"/>
        <ImageView
            android:id="@+id/danmu_setting_close"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:layout_marginLeft="125dp"
            android:src="@drawable/close"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/danmu_setting_scrollBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 弹幕开关-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/danmu_switch"/>

                <ImageView
                    android:id="@+id/open_close_danmu"
                    android:layout_width="35dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="125dp"
                    android:src="@drawable/ic_live_switch_off"/>
            </LinearLayout>

            <!-- 弹幕地址-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/danmu_url"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/danmu_path"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:singleLine="true"
                        android:background="#00000000"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"/>
                    <Button
                        android:id="@+id/change_danmu_path"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/change"/>
                </LinearLayout>
            </LinearLayout>

            <!-- 弹幕设置列表 -->
            <LinearLayout
                android:id="@+id/danmu_setting_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/block_setting_display"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="屏蔽"/>

                <TextView
                    android:id="@+id/size_setting_display"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="字体"/>

                <TextView
                    android:id="@+id/speed_setting_display"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="速度"/>
            </LinearLayout>

            <!-- 弹幕屏蔽列表 -->
            <LinearLayout
                android:id="@+id/danmu_block_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/block_list"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/mobile_danmu"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/moblie_danmu_unchecked"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@android:color/white"
                            android:text="@string/mobile_danmu"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/botton_danmu"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/botton_danmu_unchecked"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@android:color/white"
                            android:text="@string/botton_danmu"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/top_danmu"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/top_danmu_unchecked"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textColor="@android:color/white"
                            android:text="@string/top_danmu"/>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/key_word_block"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/add_block_keyWord_et"
                            android:layout_width="160dp"
                            android:layout_height="38dp"
                            android:singleLine="true"/>
                        <Button
                            android:id="@+id/add_block_keyWord_bt"
                            android:layout_width="60dp"
                            android:layout_height="38dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="-3dp"
                            android:text="添加"/>
                    </LinearLayout>

                    <!-- 关键字显示-->
                    <LinearLayout
                        android:id="@+id/keyWord_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 弹幕字体大小 -->
            <LinearLayout
                android:id="@+id/danmu_size_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/danmu_size"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_size_small"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/size_small"/>

                    <TextView
                        android:id="@+id/text_size_middle"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/size_middle"/>

                    <TextView
                        android:id="@+id/text_size_big"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/size_big"/>
                </LinearLayout>
            </LinearLayout>

            <!-- 弹幕速度设置 -->
            <LinearLayout
                android:id="@+id/danmu_speed_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:text="@string/danmu_speed"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_move_slow"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/move_slow"/>

                    <TextView
                        android:id="@+id/text_move_middle"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/move_middle"/>

                    <TextView
                        android:id="@+id/text_move_fast"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:text="@string/move_fast"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/block_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone">







            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>